deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: astronomy-shop
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
